Implemented randomized function shuffling pass (along with unit tests)

--- a/lib/Transforms/Scalar/CMakeLists.txt
+++ b/lib/Transforms/Scalar/CMakeLists.txt
@@ -33,6 +33,7 @@ add_llvm_library(LLVMScalarOpts
   ScalarReplAggregates.cpp
   Scalarizer.cpp
   SeparateConstOffsetFromGEP.cpp
+  ShuffleFunctions.cpp
   SimplifyCFGPass.cpp
   Sink.cpp
   StructurizeCFG.cpp
